Added setup, run, commit instructions to README.md

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,45 @@
-numpy==1.26.4
-statsmodels==0.14.4
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+# created-by: conda 24.11.3
+blas=1.0=mkl
+bottleneck=1.4.2=py39hf3fd67a_0
+bzip2=1.0.8=h6c40b1e_6
+ca-certificates=2025.2.25=hecd8cb5_0
+expat=2.7.1=h6d0c2b6_0
+intel-openmp=2023.1.0=ha357a0b_43548
+libcxx=17.0.6=hf547dac_3
+libffi=3.4.4=hecd8cb5_1
+libgfortran=5.0.0=11_3_0_hecd8cb5_28
+libgfortran5=11.3.0=h9dfd629_28
+llvm-openmp=17.0.6=hdd4a2e0_0
+mkl=2023.1.0=h8e150cf_43560
+mkl-service=2.4.0=py39h46256e1_2
+mkl_fft=1.3.8=py39h6c40b1e_0
+mkl_random=1.2.4=py39ha357a0b_0
+ncurses=6.4=hcec6c5f_0
+numexpr=2.8.7=py39h827a554_0
+numpy=1.26.4=py39h827a554_0
+numpy-base=1.26.4=py39ha186be2_0
+openssl=3.0.16=h184c1cd_0
+packaging=24.2=py39hecd8cb5_0
+pandas=2.2.3=py39h6d0c2b6_0
+patsy=1.0.1=py39hecd8cb5_0
+pip=25.1=pyhc872135_2
+pybind11-abi=4=hd3eb1b0_1
+python=3.9.23=hd8516d5_0
+python-dateutil=2.9.0post0=py39hecd8cb5_2
+python-tzdata=2025.2=pyhd3eb1b0_0
+pytz=2024.1=py39hecd8cb5_0
+readline=8.2=hca72f7f_0
+scipy=1.13.0=py39hdb2ea58_0
+setuptools=78.1.1=py39hecd8cb5_0
+six=1.17.0=py39hecd8cb5_0
+sqlite=3.45.3=h6c40b1e_0
+statsmodels=0.14.4=py39h46256e1_0
+tbb=2021.8.0=ha357a0b_0
+tk=8.6.14=h0a12a5f_1
+tzdata=2025b=h04d1e81_0
+wheel=0.45.1=py39hecd8cb5_0
+xz=5.6.4=h46256e1_1
+zlib=1.2.13=h4b97444_1
